<resources>
    <string name="app_name">Bocadillo</string>
    <string name="bocadillo">BOCADILLO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="reg_strate">Regístrate</string>
    <string name="acceder_con_google">Acceder con Google</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="email">Email</string>
    <string name="registrarse_con_google">Registrarse con Google</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="aaron">Aaron</string>
    <string name="cancelar">Cancelar</string>
    <string name="apodo">Apodo:</string>
    <string name="a_adir_contacto">AÑADIR CONTACTO</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="contactos">CONTACTOS</string>
    <string name="chats">CHATS</string>
    <string name="ajustes">AJUSTES</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="mir">Mir</string>
    <string name="oscar">Oscar</string>
    <string name="asdf">asdf</string>
    <string name="me_pasas_la_pr_ctica_4">Me pasas la práctica 4 ???</string>
    <string name="salta_con_el_caballo">Salta con el caballo!!!!</string>
    <string name="compra_donuts_majooooo">Compra donuts, majooooo</string>
    <string name="icon_bocadillo">Icon Bocadillo</string>
    <string name="icon_user" />
    <string name="icon_pass" />
    <string name="compra_donuts_majoooooo">Compra donuts, majoooooo</string>
    <string name="chat_gen_rico">Chat genérico</string>
    <string name="perfil">Perfil</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="editar_contacto">Editar contacto</string>
    <string name="bloquear_contacto">Bloquear contacto</string>
    <string name="alias">Alias</string>
    <string name="alias2">Alias:</string>
    <string name="usuario2">Usuario:</string>
    <string name="email_">Email:</string>
    <string name="contrase_a_">Contraseña:</string>
    <string name="usuario_">Usuario:</string>
</resources>