<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:contentDescription="@string/icon_bocadillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/icon_bocadillo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/bocadillo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signin"
        android:layout_width="411dp"
        android:layout_height="466dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_signin_mail"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_input_Mail"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="#FFFFFF"
                android:hint="@string/email"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/email_"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_signin_pass"
            android:layout_width="330dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="145dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_input_Pass2"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="70dp"
                android:background="#FFFFFF"
                android:hint="@string/repetir_contrase_a"
                android:inputType="textPassword"
                android:layout_marginStart="110dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_input_Pass"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="#FFFFFF"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/contrase_a_"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_signin_user"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_input_User"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="#FFFFFF"
                android:hint="@string/usuario"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/usuario_"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_signin_buttons"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="350dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <Button
                android:id="@+id/btnsignin_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/registrarse_con_google" />

            <Button
                android:id="@+id/btnsignin_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reg_strate" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>