<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirContacto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="377dp" >

        <Button
            android:id="@+id/btnGuardarContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:layout_marginLeft="280dp"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginTop="650dp"
            android:layout_marginLeft="150dp"
            android:textColor="#673AB7"
            app:backgroundTint="#00FFFFFF" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_newcontact_user"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newcontact_input_user"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="#FFFFFF"
                android:hint="@string/usuario"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/usuario2"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_newcontact_alias"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newcontact_input_alias"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="#FFFFFF"
                android:hint="@string/alias"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/alias2"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_newcontact_titulo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/design_default_color_primary">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a_adir_contacto"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>