<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_contactos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpContactos">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_popup_contactos"
            android:layout_width="280dp"
            android:layout_height="210dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <Button
                android:id="@+id/btn_nuevoChat"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/enviar_mensaje" />

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="@string/editar_contacto" />

            <Button
                android:id="@+id/btn_block"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="130dp"
                android:text="@string/bloquear_contacto" />
        </androidx.cardview.widget.CardView>

</RelativeLayout>