<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Chats">

    <androidx.cardview.widget.CardView
        android:id="@+id/contacto_num1"
        android:layout_width="394dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/contacto_message_num1"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/me_pasas_la_pr_ctica_4"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="74dp" />

        <FrameLayout
            android:id="@+id/contacto_img_num1"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="47dp">

        </FrameLayout>

        <TextView
            android:id="@+id/contacto_name_num1"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:text="@string/oscar"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="47dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contacto_num2"
        android:layout_width="394dp"
        android:layout_height="63dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097">

        <TextView
            android:id="@+id/contacto_message_num2"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/salta_con_el_caballo"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="74dp" />

        <FrameLayout
            android:id="@+id/contacto_img_num2"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="47dp">

        </FrameLayout>

        <TextView
            android:id="@+id/contacto_name_num2"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:text="@string/mir"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="47dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contacto_num3"
        android:layout_width="394dp"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191">

        <TextView
            android:id="@+id/contacto_message_num3"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/compra_donuts_majoooooo"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="74dp" />

        <FrameLayout
            android:id="@+id/contacto_img_num3"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="47dp">

        </FrameLayout>

        <TextView
            android:id="@+id/contacto_name_num3"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:text="@string/aaron"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="47dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>